# jaka-xiang

./: .gitignore
docs/superpowers/specs/: 2026-04-16-jaka-a5-technical-architecture.md
src/jaka_a5/: CAMERA_SETUP_TUTORIAL.md  package.xml  setup.py
src/jaka_a5/docs/: robomaster-chassis-pid.md
src/jaka_a5/docs/thesis/: README.md  architecture-design.md  chatgpt-handoff-2026-04-22.md  knowledge-modules.md  literature-review.md  paper-references.md  project-continuation-plan.md  step-by-step-tutorial.md  thesis-draft.md
src/jaka_a5/jaka_a5_control/: CMakeLists.txt  package.xml
src/jaka_a5/jaka_a5_control/config/: ros2_controllers.yaml
src/jaka_a5/jaka_a5_control/launch/: control.launch.py
src/jaka_a5/jaka_a5_description/: CMakeLists.txt  package.xml
src/jaka_a5/jaka_a5_description/launch/: view_robot.launch.py
src/jaka_a5/jaka_a5_description/urdf/: gazebo.urdf.xacro  jaka_a5.robot.xacro  jaka_a5.urdf.xacro
src/jaka_a5/jaka_a5_gazebo/: CMakeLists.txt  package.xml
src/jaka_a5/jaka_a5_gazebo/launch/: sim.launch.py
src/jaka_a5/jaka_a5_gazebo/worlds/: battery_station.world
src/jaka_a5/jaka_a5_planning/: CMakeLists.txt  package.xml
src/jaka_a5/jaka_a5_planning/config/: jaka_a5.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
src/jaka_a5/jaka_a5_planning/launch/: move_group.launch.py
src/jaka_a5/jaka_a5_vision/: package.xml  setup.cfg  setup.py
src/jaka_a5/jaka_a5_vision/config/: apriltag.yaml
src/jaka_a5/jaka_a5_vision/jaka_a5_vision/: apriltag_subscriber.py  camera_qos_relay.py  experiment_logger.py  pregrasp_coordinator.py  vs_controller.py
src/jaka_a5/jaka_a5_vision/launch/: vs.launch.py
src/jaka_a5/launch/: integration.launch.py
src/jaka_a5_bringup/: CMakeLists.txt  package.xml
src/jaka_a5_bringup/launch/: integration.launch.py
