<?xml version="1.0"?>
<?xml-model href="http://www.ros.org/repo/prov/-/rospkg.xsd"?>
<package format="3">
  <name>jaka_a5_description</name>
  <version>0.1.0</version>
  <description>JAKA A5 Robot Description - URDF and xacro files</description>
  <maintainer email="xiangscream@example.com">xiangscream</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>xacro</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
