<?xml version="1.0"?>
<package format="3">
  <name>jaka_a5_vision</name>
  <version>0.1.0</version>
  <description>JAKA A5 Visual Servo Control with AprilTag</description>
  <maintainer email="xiangscream@example.com">xiangscream</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>apriltag_msgs</depend>
  <depend>apriltag_ros</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
